# MK4001MTD-USB-Bridge

./: CMakeLists.txt  README.md  flash_and_capture.sh
docs/: N91_TRACE_ANALYSIS.md  analyze_all.py  decode_sdio.py
hardware/: ConnectorStand.stl  MK4001MTD_USB_Reader.kicad_pcb  MK4001MTD_USB_Reader.kicad_pro  MK4001MTD_USB_Reader.kicad_sch  MidFrame.step
hardware/Gerber/: MK4001MTD_USB_Reader-B_Cu.gbr  MK4001MTD_USB_Reader-B_Mask.gbr  MK4001MTD_USB_Reader-B_Paste.gbr  MK4001MTD_USB_Reader-B_Silkscreen.gbr  MK4001MTD_USB_Reader-Edge_Cuts.gbr  MK4001MTD_USB_Reader-F_Cu.gbr  MK4001MTD_USB_Reader-F_Mask.gbr  MK4001MTD_USB_Reader-F_Paste.gbr  MK4001MTD_USB_Reader-F_Silkscreen.gbr  MK4001MTD_USB_Reader-In1_Cu.gbr  MK4001MTD_USB_Reader-In2_Cu.gbr  MK4001MTD_USB_Reader-NPTH.drl  MK4001MTD_USB_Reader-PTH.drl  MK4001MTD_USB_Reader-job.gbrjob
hardware/MK4001MTD.pretty/: MK4001MTD.kicad_mod
hardware/bom/: ibom.html
src/: ata_sdio.c  ata_sdio.h  led.h  main.c  msc_device.c  msc_device.h  sdio.pio  sdio_hw.c  sdio_hw.h  sdio_pio.c  sdio_pio.h  tusb_config.h  usb_descriptors.c
testscript/: flash.sh  flash_and_capture.sh  test.sh  test_rw_uart.sh
